<resources>
    <string name="app_name">DuoApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Mail</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">El mail ingresado es inválido</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_login_text">INICIAR SESIÓN CON FACEBOOK</string>
    <string name="google_login_text">INICIAR SESIÓN CON GOOGLE</string>
    <string name="google_logout_text">CERRAR SESIÓN DE GOOGLE</string>

    <!-- Key Facebook Auth -->
    <string name="facebook_app_id">1875610326040756</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out_text">Cerrar sesión</string>
    <string name="no_internet_connection_message">Sin conexión a internet</string>
    <string name="unknow_error_text">Error desconocido</string>
    <string name="menu_whatsapp_invitation_body">Hola, soy %1$s y te quería invitar a que pruebes esta maravillosa aplicación que te ayudará a encontrar partners para jugar en linea.</string>
    <string name="menu_whatsapp_invitation_suject">Conoce DuoApp!</string>
    <string name="menu_no_whatsapp">WhatsApp no se encuentra instalado</string>
    <string name="title_activity_maps">Map</string>
    <string name="gameTitleTV">Juego</string>
    <string name="regionTitleTV">Región</string>
    <string name="usernameTitleTV">Nombre de Usuario</string>
    <string name="leagueTitleTV">Liga</string>
    <string name="divisionTitleTV">División</string>
    <string name="mainRolTitleTV">Rol Principal</string>
    <string name="otherRolTitleTV">Rol Secundario</string>
    <string name="registerTitleText">Para continuar ingrese los siguientes datos</string>
    <string name="registerGameHint">Selecciona un juego</string>
    <string name="registerLeagueHint">Selecciona la liga que estás actualmente</string>
    <string name="registerUsernameED">Nombre de Usuario</string>
    <string name="registerDivisionHint">Ingresa la división en que estás actualmente</string>
    <string name="mainRolHint">Rol principal</string>
    <string name="mainRol2Hint">Rol secundario</string>
    <string name="registerPincipalRolsHint">Selecciona los roles en que mejor juegas</string>
    <string name="registerConfirmButtonText">Confirmar</string>
    <string name="registerRegionHint">Selecciona la region en que juegas</string>
    <string name="register_username_error_text">Debe ingresar un nombre de usuario</string>
    <string name="auth_failed">Error</string>
    <string name="registerLocationHint">Ingresa tu ubicación</string>

    <string-array name="gameList">
        <item>League of Legends</item>
    </string-array>

    <string-array name="leagueList">
        <item>Bronze</item>
        <item>Plata</item>
        <item>Oro</item>
        <item>Platino</item>
        <item>Diamante</item>
        <item>Maestro</item>
        <item>Retador</item>
    </string-array>

    <string-array name="divisionList">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>

    <string-array name="rolList">
        <item>Top</item>
        <item>Jungla</item>
        <item>Mid</item>
        <item>Adc</item>
        <item>Soporte</item>
        <item>Comodín</item>
    </string-array>

    <string-array name="regionList">
        <item>Brasil</item>
        <item>EU Nórdica y Este</item>
        <item>EU Oeste</item>
        <item>Japón</item>
        <item>Latinoamérica Norte</item>
        <item>Latinoamérica Sur</item>
        <item>Norteamérica</item>
        <item>Oceanía</item>
        <item>Rusia</item>
        <item>Turquía</item>
    </string-array>
</resources>
