<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBG"
    tools:context="com.example.progeria.duoapp.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorHint"
                android:backgroundTint="@color/textColorHint">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/textColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textColorHint"
                android:backgroundTint="@color/textColorHint"
                android:foregroundTint="@color/textColorHint">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:shadowColor="@color/textColorHint"
                    android:backgroundTint="@color/textColorHintDark"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:background="@drawable/primary_button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                fb:com_facebook_login_text="@string/facebook_login_text"
                fb:com_facebook_logout_text="@string/facebook_login_text"
                />

            <Button
                android:id="@+id/sign_in_button2"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_login_button"
                android:layout_centerHorizontal="true"
                android:text="@string/google_login_text"
                android:drawableLeft="@drawable/ic_google"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
